--- a/app/view/listar-usuarios.mustache
+++ b/app/view/listar-usuarios.mustache
@@ -5,6 +5,7 @@
         </div>
         <div class="col-sm-10">
             <div id="accordion">
+            <a href="/usuarios/pdf" target="_blank" class="btn btn-warning">Generar Reporte</a>
                 <table class="table table-hover">
                     <thead>
                         <tr>
