--- a/app/view/listar-usuarios-pdf.mustache
+++ b/app/view/listar-usuarios-pdf.mustache
@@ -5,8 +5,8 @@
         </div>
         <div class="col-sm-10">
             <div id="accordion">
-                <table class="table table-hover">
-                    <thead>
+                <table class="table table-bordered">
+                    <thead class="thead-dark">
                     <tr>
                         <th scope="col">Usuario</th>
                         <th scope="col">Apellido</th>
@@ -37,8 +37,8 @@
         </div>
         <div class="col-sm-10">
             <div id="accordion">
-                <table class="table table-hover">
-                    <thead>
+                <table class="table table-bordered">
+                    <thead class="thead-dark">
                     <tr>
                         <th scope="col">Usuario</th>
                         <th scope="col">Apellido</th>
@@ -71,8 +71,8 @@
         </div>
         <div class="col-sm-10">
             <div id="accordion">
-                <table class="table table-hover">
-                    <thead>
+                <table class="table  table-bordered">
+                    <thead class="thead-dark">
                     <tr>
                         <th scope="col">Usuario</th>
                         <th scope="col">Apellido</th>
@@ -88,12 +88,14 @@
                             <td>{{usuario}}</td>
                             <td>{{apellido}}</td>
                             <td>{{nombre}}</td>
-                            {{#suscripcion_activa}}
-                                activa
-                            {{/suscripcion_activa}}
-                            {{^suscripcion_activa}}
-                                inactiva
-                            {{/suscripcion_activa}}
+                            <td>
+                                {{#suscripcion_activa}}
+                                    <span class="badge badge-warning">Suscripción activa</span>
+                                {{/suscripcion_activa}}
+                                {{^suscripcion_activa}}
+                                    inactiva
+                                {{/suscripcion_activa}}
+                            </td>
                         </tr>
                         {{/es_admin}}
                         {{/es_contenidista}}
